--- a/css/Cultura.css
+++ b/css/Cultura.css
@@ -1,9 +1,88 @@
 @import url(./global.css);
 
 header{
-    height: 10rem;
+    height: 8rem;
 }
 
-.tudo {
+.conteudo {
+    border-radius: 4.375rem 4.375rem 0rem 0rem;
     background-color: #b41d2b;
+    display: flex;
+ 
+}
+
+.description p {
+    margin-left: 6rem;
+    width: 40rem;
+   margin-top: 0rem;
+    font-size: 1.25rem;
+    color: #faf8f4;
+    font-weight: bold;
+    text-align: center;
+}
+
+.conteudo nav ul li a{
+    border: 0.0625rem solid white;
+    margin:  7rem 12.5rem 1.375rem 13.75rem;
+    font-size: 1.25rem;
+    width: 25rem;
+    height: 4.375rem;
+    background-color: #f4929a;
+    color: #b41d2b;
+    border-radius: 2.5rem;
+    cursor: pointer;
+    padding: 1.25rem 6.25rem 1.25rem 6.25rem;
+    text-decoration: none;
+    font-weight: bold;
+    
+}
+
+h1{
+    margin-left: 6rem;
+   margin-bottom: -5.2rem;
+    font-size: 8.25rem;
+    color: #f4929a;
+}
+
+.description h2{
+    font-size: 1.725rem;
+    margin-left: 1rem ;
+   margin-top: 9rem;
+    color: #faf8f4;
+    width: 54rem;
+    text-align: center;
+}
+
+.description {
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+}
+
+.comida {
+    margin-top: 3rem;
+    width: 20rem;
+    margin-left: 10rem;
+    border-radius: 4rem;
+}
+
+.judo {
+    width: 20rem;
+    margin-top: 2rem;
+    margin-right: 2rem;
+    margin-left: 10rem;
+    border-radius: 4rem;
+}
+
+.kimono{
+    width: 20rem;
+    margin-top: 2rem;
+    border-radius: 4rem;
+}
+
+.desenho{
+    width: 19rem;
+    margin-top: 2rem;
+    padding-bottom: 1.40rem;
+    border-radius: 4rem;
 }
