--- a/css/pontos.css
+++ b/css/pontos.css
@@ -20,6 +20,7 @@ header{
     font-weight: bold;
     text-align: center;
     text-decoration: none;
+    list-style: none;
 }
 
 .conteudo .description nav ul li a{
@@ -35,7 +36,7 @@ header{
     padding: 1.25rem 6.25rem 1.25rem 6.25rem;
     text-decoration: none;
     font-weight: bold;
-    
+    list-style: none;
     
 }
 
