--- a/css/historia.css
+++ b/css/historia.css
@@ -22,69 +22,65 @@
     padding-bottom: 2.5rem;
 }
 
-.kamikaze {
-    width: 600px;
+.kamikaze { 
+    width: 43.75rem; /* 700px */
     height: auto;
-    border: 1px solid black;
-    border-radius: 60px;
-    margin-left: 70px;
+    border: 0.0625rem solid black; /* 1px */
+    border-radius: 3.75rem; /* 60px */
+    margin-left: 1rem; /* 16px */
     margin-top: 18rem;
-    
 }
 
-.medieval{
-    width: 600px;
+.medieval {
+    width: 37.5rem; /* 600px */
     height: auto;
-    border: 1px solid black;
-    border-radius: 60px;
-    margin-left: 70px;
-    margin-right: 100px;
-    margin-top: 18px;
+    border: 0.0625rem solid black; /* 1px */
+    border-radius: 3.75rem; /* 60px */
+    margin-left: 4.375rem; /* 70px */
+    margin-right: 6.25rem; /* 100px */
+    margin-top: 1.125rem; /* 18px */
 }
 
-
-
-h1{
-    margin-block: 8.625rem;
-    font-size: 8.25rem;
+h1 {
+    margin-block: 8.625rem; /* 138px */
+    font-size: 8.25rem; /* 132px */
     color: #b41d2b;
 }
 
-h2{
-    font-size: 1.5625rem;
-    margin-left: 11.75rem ;
-    margin-top: 2.2rem;
+h2 {
+    font-size: 1.5625rem; /* 25px */
+    margin-left: 11.75rem; /* 188px */
+    margin-top: 2.2rem; /* 35.2px */
 }
 
 .description {
-    height: calc(49.1vh - 100px);
+    height: calc(49.1vh - 6.25rem); /* 100px */
 }
 
-.description nav ul li a{
-    border: 0.0625rem solid white;
-    margin:  0rem 12.5rem 1.375rem 7.75rem;
-    font-size: 1.25rem;
-    width: 25rem;
-    height: 4.375rem;
+.description nav ul li a {
+    border: 0.0625rem solid white; /* 1px */
+    margin: 0rem 12.5rem 1.375rem 7.75rem; /* 200px, 22px, 124px */
+    font-size: 1.25rem; /* 20px */
+    width: 25rem; /* 400px */
+    height: 4.375rem; /* 70px */
     background-color: #f4929a;
     color: #b41d2b;
-    border-radius: 2.5rem;
+    border-radius: 2.5rem; /* 40px */
     cursor: pointer;
-    padding: 1.25rem 6.25rem 1.25rem 6.25rem;
+    padding: 1.25rem 6.25rem 1.25rem 6.25rem; /* 20px, 100px */
     text-decoration: none;
     font-weight: bold;
-    
 }
 
 .Bandeira {
-width: 700px;
-margin-top: -370px;
-align-items: center;
-margin-bottom: 6px;
+    width: 43.75rem; /* 700px */
+    margin-top: -23.125rem; /* -370px */
+    align-items: center;
+    margin-bottom: 0.375rem; /* 6px */
 }
 
 .description, .Bandeira {
-    margin-left: -30px;
+    margin-left: -1.875rem; /* -30px */
 }
 
 body {
